IVYPORTAL-11673 Various or urgent requests in IVYPORTAL S203 - IVYPORTAL-11660: Fix alignment in Express

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -28,9 +28,10 @@
  */
 
 /* =================== FIELDSET ====================== */
-.fieldset-no-border {
+body .ui-fieldset.fieldset-no-border {
   border: none !important;
   padding: .6em 0;
+  margin: 0;
 }
 
 .fieldset-no-border .ui-fieldset-toggler.ui-icon-minusthick:before {
